--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="space-y-3">
       <input type="text" id="judul" placeholder="Judul" class="w-full p-2 border rounded">
       <textarea id="isi" rows="3" placeholder="Apa yang kamu pikirkan?" class="w-full p-2 border rounded"></textarea>
-      <input type="date" id="tanggal" class="w-full p-2 border rounded">
+      <input type="date" id="tanggal" class="w-full p-2 border rounded text-black bg-white">
       <input type="text" id="tag" placeholder="#tag (opsional)" class="w-full p-2 border rounded">
       <button onclick="tambahCatatan()" class="w-full bg-green-600 text-white py-2 rounded hover:bg-green-700">Simpan</button>
       <input type="text" id="pencarian" placeholder="Cari catatan..." oninput="tampilkanCatatan()" class="w-full p-2 border rounded">
