--- a/index.html
+++ b/index.html
@@ -1,35 +1,40 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8">
-  <title>Catatan</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Aplikasi Catatan</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gray-100 p-6">
-  <div class="max-w-xl mx-auto bg-white p-4 rounded shadow">
-    <h1 class="text-xl font-bold mb-4">Tambah Catatan</h1>
-    <form id="noteForm" class="space-y-4">
-      <textarea id="isi" class="w-full p-2 border rounded" placeholder="Tulis catatan..." required></textarea>
-      <button type="submit" class="bg-blue-600 text-white px-4 py-2 rounded">Simpan</button>
+<body class="bg-gray-100 min-h-screen flex items-center justify-center p-4">
+  <div class="w-full max-w-xl bg-white shadow-md rounded-lg p-6">
+    <h1 class="text-2xl font-bold mb-4 text-center text-blue-600">Catatan Harian</h1>
+
+    <!-- Form Catatan -->
+    <form id="noteForm" class="mb-6 space-y-4">
+      <textarea id="isi" placeholder="Tulis catatanmu di sini..." class="w-full p-3 border border-gray-300 rounded focus:outline-none focus:ring focus:border-blue-400" required></textarea>
+      <button type="submit" class="w-full bg-blue-600 text-white py-2 rounded hover:bg-blue-700 transition">Simpan Catatan</button>
     </form>
 
-    <div class="mt-8">
-      <h2 class="text-lg font-semibold mb-2">Daftar Catatan</h2>
-      <ul id="noteList" class="space-y-2"></ul>
+    <!-- Daftar Catatan -->
+    <div>
+      <h2 class="text-lg font-semibold mb-2 text-gray-700">Daftar Catatan:</h2>
+      <ul id="noteList" class="space-y-3 max-h-96 overflow-y-auto"></ul>
     </div>
   </div>
 
   <script>
     const form = document.getElementById('noteForm');
     const noteList = document.getElementById('noteList');
-    const scriptURL = 'https://script.google.com/macros/s/AKfycbwaIz1Tg5beDL8iedlmny-3sTJihemDyO88AF976w12COb1rbqr7HNmJzz5ZYUjNj25wA/exec';
+    const scriptURL = 'https://script.google.com/macros/s/AKfycbwaIz1Tg5beDL8iedlmny-3sTJihemDyO88AF976w12COb1rbqr7HNmJzz5ZYUjNj25wA/exec'; // <-- Ganti ini
 
+    // Simpan catatan
     form.addEventListener('submit', async (e) => {
       e.preventDefault();
       const isi = document.getElementById('isi').value;
 
       try {
-        const response = await fetch(scriptURL, {
+        const res = await fetch(scriptURL, {
           method: 'POST',
           body: JSON.stringify({ isi }),
           headers: {
@@ -37,30 +42,31 @@
           }
         });
 
-        const result = await response.json();
-        if (result.success) {
+        const data = await res.json();
+        if (data.success) {
           document.getElementById('isi').value = '';
           fetchNotes();
         }
-      } catch (error) {
-        alert('Gagal menyimpan catatan');
+      } catch (err) {
+        alert('Gagal menyimpan catatan.');
       }
     });
 
+    // Ambil catatan
     async function fetchNotes() {
       try {
-        const response = await fetch(scriptURL);
-        const notes = await response.json();
+        const res = await fetch(scriptURL);
+        const notes = await res.json();
 
         noteList.innerHTML = '';
         notes.reverse().forEach(note => {
-          const item = document.createElement('li');
-          item.className = 'bg-gray-200 p-2 rounded';
-          item.innerHTML = `<div>${note.isi}</div><small>${new Date(note.tanggal).toLocaleString()}</small>`;
-          noteList.appendChild(item);
+          const li = document.createElement('li');
+          li.className = 'bg-gray-100 p-3 rounded shadow text-sm';
+          li.innerHTML = `<p>${note.isi}</p><p class="text-xs text-gray-500 mt-1">${new Date(note.tanggal).toLocaleString()}</p>`;
+          noteList.appendChild(li);
         });
-      } catch (error) {
-        noteList.innerHTML = '<li class="text-red-500">Gagal memuat catatan</li>';
+      } catch (err) {
+        noteList.innerHTML = '<li class="text-red-500">Gagal memuat catatan.</li>';
       }
     }
 
