--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </div>
 
   <script>
-    const scriptURL = "YOUR_SCRIPT_URL"; // ganti dengan URL Web App dari Google Apps Script
+    const scriptURL = "https://script.google.com/macros/s/AKfycbxZayXAxAdN8RNCp-kxZN57QnnNZNuMfH6HFfzCZ5b_3RZJG3aFhSXvDahlXFckWvqKtw/exec"; // ganti dengan URL Web App dari Google Apps Script
 
     const form = document.getElementById("note-form");
     const noteInput = document.getElementById("note");
